# worrywart-rs

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.template.md  cargo-generate.toml  release-please-config.json
.github/: copilot-instructions.md  dependabot.yml
.github/actions/workspace-version/: action.yml
.github/instructions/: global.rust.instructions.md
.github/workflows/: build-extension.yml  ci.yml  codeql.yml  publish-extension.yml  publish.yml  release-please.yml
crates/worrywart/: CHECKLIST.md  Cargo.toml  DESIGN-NOTES.md  PLANS.md  README.md
crates/worrywart-client/: Cargo.toml  README.md
crates/worrywart-client/src/: lib.rs
crates/worrywart/src/: compat.rs  core.rs  iocp.rs  lib.rs  monitor.rs  pump.rs  sentinel.rs  termination.rs
crates/worrywart/tests/: phase0_compat.rs  phase1_debug_api.rs  phase2_job_object.rs  phase3_sentinel.rs
crates/{{core_crate_name}}/: Cargo.toml  README.md
crates/{{core_crate_name}}/src/: lib.rs
crates/{{mcp_crate_name}}/: Cargo.toml  README.md
crates/{{mcp_crate_name}}/extension/: .gitignore  .vscodeignore  README.md  package.json  tsconfig.json
crates/{{mcp_crate_name}}/extension/src/: extension.ts
crates/{{mcp_crate_name}}/src/: lib.rs  main.rs  tools.rs
scripts/: post-script.rhai
tools/: check-encoding.ps1
