# Copyright (c) {{license_year}} {{author_name}}

[workspace]
members = [
    "crates/{{core_crate_name}}",
{% if include_mcp %}    "crates/{{mcp_crate_name}}",
{% endif %}]
resolver = "2"

[workspace.package]
version       = "0.1.0" # x-release-please-version
authors       = ["{{author_name}}"]
edition       = "2021"
rust-version  = "1.85"
license       = "MIT"
repository    = "https://github.com/{{github_owner}}/{{project_name}}"
homepage      = "https://github.com/{{github_owner}}/{{project_name}}"
documentation = "https://docs.rs/{{core_crate_name}}"

[workspace.dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Release profile: tuned for shipped binary size (bundled inside the VS Code
# extension VSIX).
#
# - `strip = "symbols"` removes debug symbols; typically halves a Rust Windows binary.
# - `lto = "thin"` enables cross-crate inlining/dead-code elimination at link time.
# - `codegen-units = 1` lets LLVM see the whole crate at once for better optimisation.
[profile.release]
strip         = "symbols"
lto           = "thin"
codegen-units = 1
