# Copyright (c) 2026 Michael Grier

[workspace]
members = [
    "crates/worrywart",
]
resolver = "2"

[workspace.package]
version       = "0.1.0" # x-release-please-version
authors       = ["Michael Grier"]
edition       = "2021"
rust-version  = "1.85"
license       = "MIT"
repository    = "https://github.com/MikeGrier/worrywart-rs"
homepage      = "https://github.com/MikeGrier/worrywart-rs"
documentation = "https://docs.rs/worrywart"

[workspace.dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip         = "symbols"
lto           = "thin"
codegen-units = 1
