# Copyright (c) 2026 Michael Grier

[package]
name          = "worrywart-client"
description   = "Client-side sentinel support for worrywart child-process monitoring"
readme        = "README.md"
publish       = false
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
# documentation intentionally omitted: publish = false; distributed as GitHub release artifact
keywords      = ["process", "monitoring", "windows", "sentinel"]
categories    = ["os::windows-apis", "development-tools"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
