# Copyright (c) 2026 Michael Grier

[package]
name          = "worrywart"
description   = "A library that worries, maybe too much, about child processes"
readme        = "README.md"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true

[dependencies]

[dev-dependencies]
