# Copyright (c) 2026 Michael Grier

[package]
name          = "worrywart"
description   = "A library that worries, maybe too much, about child processes"
readme        = "README.md"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true

[dependencies]
tokio = { version = "1.52.3", features = ["process"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
] }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt", "macros", "rt-multi-thread"] }
