# Copyright (c) 2026 Michael Grier

[package]
name          = "worrywart"
description   = "A library that worries, maybe too much, about child processes"
readme        = "README.md"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true

[dependencies]
tokio = { version = "1.52.3", features = ["process"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_IO",
] }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt", "macros", "rt-multi-thread"] }

# Small helper binaries used by Phase 1 integration tests.
[[bin]]
name = "helper-exit0"
path = "src/bin/helper_exit0.rs"
test = false
doc = false

[[bin]]
name = "helper-crash"
path = "src/bin/helper_crash.rs"
test = false
doc = false

[[bin]]
name = "helper-fastfail"
path = "src/bin/helper_fastfail.rs"
test = false
doc = false

[[bin]]
name = "helper-sleep"
path = "src/bin/helper_sleep.rs"
test = false
doc = false
